--- a/backend/package.json
+++ b/backend/package.json
@@ -10,22 +10,26 @@
     "db:setup": "node scripts/setupDb.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.2",
-    "axios": "^1.6.2",
-    "jsonwebtoken": "^9.1.1",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
-    "qrcode": "^1.5.3",
-    "uuid": "^9.0.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.10.0",
+    "qrcode": "^1.5.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^20.10.6",
     "@types/pg": "^8.11.2",
-    "ts-node": "^10.9.2"
+    "@types/qrcode": "^1.5.6",
+    "@types/uuid": "^10.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
