--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,4 @@
 {
   "name": "sofin-web",
-  "buildCommand": "npm run build",
-  "env": {
-    "NEXT_PUBLIC_API_URL": "@next_public_api_url",
-    "NEXT_PUBLIC_APP_URL": "@next_public_app_url"
-  }
+  "buildCommand": "npm run build"
 }
